near-sdk-macros/src/core_impl/code_generator/snapshots/handle_result_borsh.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[unsafe(no_mangle)]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    let contract = <Hello as ::near_sdk::state::ContractState>::state_read()
        .unwrap_or_default();
    let result = Hello::method(&contract);
    match result {
        ::std::result::Result::Ok(result) => {
            let result = match ::near_sdk::borsh::to_vec(&result) {
                Ok(v) => v,
                Err(_) => {
                    ::near_sdk::env::panic_str(
                        "Failed to serialize the return value using Borsh.",
                    )
                }
            };
            ::near_sdk::env::value_return(&result);
        }
        ::std::result::Result::Err(err) => ::near_sdk::FunctionError::panic(&err),
    }
}
