near-sdk-macros/src/core_impl/code_generator/snapshots/init_ignore_state.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[unsafe(no_mangle)]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_err(
            ::near_sdk::errors::DepositNotAccepted::new("method"),
        );
    }
    #[derive(::near_sdk::serde::Deserialize)]
    #[serde(crate = "::near_sdk::serde")]
    struct Input {
        k: u64,
    }
    let Input { mut k }: Input = match ::near_sdk::env::input() {
        Some(input) => {
            match ::near_sdk::serde_json::from_slice(&input) {
                Ok(deserialized) => deserialized,
                Err(e) => {
                    ::near_sdk::env::panic_err(
                        ::near_sdk::errors::JsonDeserializeError::new(
                            &format!("input: {e}"),
                        ),
                    );
                }
            }
        }
        None => {
            ::near_sdk::env::panic_err(
                ::near_sdk::errors::InvalidArgument::new(
                    "Expected input since method has arguments.",
                ),
            )
        }
    };
    let contract = Hello::method(&mut k);
    <Hello as ::near_sdk::state::ContractState>::state_write(&contract);
}
