near-sdk-macros/src/core_impl/code_generator/snapshots/init_private.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 368
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn new() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::env::panic_str("Method new is private");
    }
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_str("Method new doesn't accept deposit");
    }
    if <Hello as ::near_sdk::state::ContractState>::state_exists() {
        ::near_sdk::env::panic_str("The contract has already been initialized");
    }
    let contract = Hello::new();
    <Hello as ::near_sdk::state::ContractState>::state_write(&contract);
}
